[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sweeps-intel"
version = "0.1.0"
description = "Affiliation-aware entity index and monitoring pipeline"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/intel"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
